--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
 
 .App{
   max-width: min(100vw, 1250px);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
