--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,15 @@ textarea{
 select{
   border:1px solid blue;
 }
+
+
+.swiper-pagination-bullet-active {
+  background-color: rgb(34 197 94) !important
+}
+
+
+.swiper-button-next,
+.swiper-button-prev{
+  color:rgb(34 197 94) !important;
+  
+}
