changed color scheme, items now upadates on edit page from cold start, colors and cloth categories are show in edit page if was created before

--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,9 @@ input[type=file]{
   color:transparent;
   margin-bottom: 2em;
 }
+
+
+
+.Toastify__progress-bar--success {
+  background: #4fd1c5;
+}
