--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   margin: 0 auto;
 }
 
 .wrapper{
+  width:100%;
   max-width: min(100vw, 1250px);
 
-  margin: 0 auto;
 }
 
 
